@@ -59,6 +59,10 @@ http://www.newbreedsoftware.com/tuxpaint/
   * iconv_close() was being called even if 'cd' was -1 (not set).  Fixed.
     Darrell Walisser <walisser@mac.com>
 
+  * If gnome-config is not found, it doesn't necessarily mean Gnome isn't being used!
+    Makefile will now fall-back and assume $GNOME_PREFIX should be /usr, so that the
+    launcher icon gets installed into the Gnome menu.
+
 
 2003.Jun.17 (0.9.11)
   * Windows bugfixes.
